fix(content-page) fixes width to match width viewports with scrollbars

--- a/src/main.scss
+++ b/src/main.scss
@@ -602,8 +602,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 50%;
-  margin-left: 50%;
+  width: 50vw;
+  margin-left: 50vw;
   min-height: 100vh;
   padding-top: var(--s-gutter);
   padding-right: var(--s-gutter);
